clang/test/CXX/temp/temp.spec/temp.expl.spec/p10.cpp
// RUN: clang-cc -fsyntax-only -verify %s

template<class T> class X; 
template<> class X<int>; // expected-note{{forward}}
X<int>* p; 

X<int> x; // expected-error{{incomplete type}}
